[gd_scene load_steps=6 format=2]

[ext_resource path="res://logic/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/NotoSans.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 640 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="MarginContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/MainMenu"]
margin_right = 216.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
margin_right = 216.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_right = 216.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "BrickBuster"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 43.0
margin_right = 216.0
margin_bottom = 452.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Continue Game"

[node name="NewGameButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 456.0
margin_right = 216.0
margin_bottom = 866.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "New Game"

[node name="ScoresButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
visible = false
margin_top = 428.0
margin_right = 720.0
margin_bottom = 852.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Scores"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 870.0
margin_right = 216.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Quit Game"

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 472, 1216 )

[node name="TopWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 360, -8 )
shape = SubResource( 1 )

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 736, 640 )
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 360, 1288 )
shape = SubResource( 1 )

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( 200, 640 )
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
polygon = PoolVector2Array( 216, 0, 720, 0, 720, 1280, 216, 1280 )
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
